# recipe-urls

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: run-unit-tests.yml  run_tests.yml
recipe_urls/: __init__.py  _abstract.py  _utils.py  abuelascounter.py  acouplecooks.py  addapinch.py  afghankitchenrecipes.py  allrecipes.py  ambitiouskitchen.py  archanaskitchen.py  averiecooks.py  bakingmischief.py  bakingsense.py  barefootcontessa.py  base_scraper.py  bbc.py  bettycrocker.py  bigoven.py  bluejeanchef.py  bonappetit.py  bongeats.py  bowlofdelicious.py  budgetbytes.py  carlsbadcravings.py  castironketo.py  cdkitchen.py  chefsavvy.py  closetcooking.py  cookieandkate.py  copykat.py  countryliving.py  creativecanning.py  davidlebovitz.py  delish.py  domesticateme.py  downshiftology.py  eatingbirdfood.py  eatingwell.py  eatliverun.py  eatsmarter.py  (+69 more)
recipe_urls.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
recipe_urls/url_scrapers/: abuelascounter_scraper.py  acouplecooks_scraper.py  addapinch_scraper.py  afghankitchenrecipes_scraper.py  allrecipes_scraper.py  ambitiouskitchen_scraper.py  archanaskitchen_scraper.py  averiecooks_scraper.py  bakingmischief_scraper.py  bakingsense_scraper.py  barefootcontessa_scraper.py  bbc_scraper.py  bongeats_scraper.py  food52_scraper.py  food_scraper.py  hellofresh_scraper.py  nytimes_scraper.py
tests/: test_concat_host.py  test_get_site_origin.py  test_scrapers.py  test_scrapers_with_base_url.py  test_scrapers_with_html.py
tests/test_data/abuelascounter/: abuelascounter.csv  (+3 more)
(+394 files in other folders)
